--- a/BookLover-REST-Services/BookLover.DataAccessLayer/BookLover.DataAccessLayer.csproj
+++ b/BookLover-REST-Services/BookLover.DataAccessLayer/BookLover.DataAccessLayer.csproj
@@ -58,8 +58,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Contexts\BookLoverDbContext.cs" />
+    <Compile Include="Contexts\IBookLoverDbContext.cs" />
     <Compile Include="Migrations\BookLoverDbMigrationConfiguration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\IRepository.cs" />
+    <Compile Include="Repositories\Repository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -67,7 +70,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Data\" />
-    <Folder Include="Repositories\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BookLover.EntityModels\BookLover.EntityModels.csproj">
