--- a/BookLover-REST-Services/BookLover.Web/BookLover.Web.csproj
+++ b/BookLover-REST-Services/BookLover.Web/BookLover.Web.csproj
@@ -272,8 +272,10 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\AuthorsController.cs" />
     <Compile Include="Controllers\BaseApiController.cs" />
+    <Compile Include="Controllers\BookDiariesController.cs" />
     <Compile Include="Controllers\BooksController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\ReviewsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -286,9 +288,12 @@
     <Compile Include="Models\BindingModels\RegisterBindingModel.cs" />
     <Compile Include="Models\BindingModels\RegisterExternalBindingModel.cs" />
     <Compile Include="Models\BindingModels\RemoveLoginBindingModel.cs" />
+    <Compile Include="Models\BindingModels\ReviewsBindingModels\CreateReviewBindingModel.cs" />
     <Compile Include="Models\BindingModels\SetPasswordBindingModel.cs" />
     <Compile Include="Models\DataTransferObjects\AuthorDto.cs" />
+    <Compile Include="Models\DataTransferObjects\BookDiaryDto.cs" />
     <Compile Include="Models\DataTransferObjects\BookDto.cs" />
+    <Compile Include="Models\DataTransferObjects\ReviewDto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
     <Compile Include="Results\ChallengeResult.cs" />
