--- a/BookLover-REST-Services/BookLover.Web/Web.config
+++ b/BookLover-REST-Services/BookLover.Web/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="BookLOverDbConnection" connectionString="Data Source=.;Initial Catalog=BookLover;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="BookLOverDbConnection" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=BookLover;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings></appSettings>
   <system.web>
