--- a/BookLover-Flux-Client/package.json
+++ b/BookLover-Flux-Client/package.json
@@ -9,6 +9,7 @@
     "keymirror": "^0.1.1",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
+    "react-router": "^2.6.1",
     "superagent": "^2.1.0",
     "uglifyjs": "^2.4.10",
     "underscore": "^1.8.3"
