--- a/BookLover-REST-Services/BookLover.Web/Web.config
+++ b/BookLover-REST-Services/BookLover.Web/Web.config
@@ -7,6 +7,9 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="BookLover.Web.UserSessionUtils.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </sectionGroup>
   </configSections>
   <connectionStrings>
     <add name="BookLOverDbConnection" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=BookLover;Integrated Security=True" providerName="System.Data.SqlClient" />
@@ -110,4 +113,11 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
+  <applicationSettings>
+    <BookLover.Web.UserSessionUtils.Settings>
+      <setting name="UserSessionTimeout" serializeAs="String">
+        <value>00:30:00</value>
+      </setting>
+    </BookLover.Web.UserSessionUtils.Settings>
+  </applicationSettings>
 </configuration>
