--- a/BookLover-REST-Services/BookLover.Web/packages.config
+++ b/BookLover-REST-Services/BookLover.Web/packages.config
@@ -4,6 +4,7 @@
   <package id="AutoMapper" version="3.1.1" targetFramework="net452" />
   <package id="bootstrap" version="3.0.0" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
+  <package id="EntityFramework.Extended" version="6.1.0.168" targetFramework="net452" />
   <package id="jQuery" version="1.10.2" targetFramework="net452" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights" version="2.1.0" targetFramework="net452" />
@@ -34,6 +35,7 @@
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net452" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.1" targetFramework="net452" />
+  <package id="Microsoft.Owin.Hosting" version="3.0.1" targetFramework="net452" />
   <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net452" />
   <package id="Microsoft.Owin.Security.Cookies" version="3.0.1" targetFramework="net452" />
   <package id="Microsoft.Owin.Security.Facebook" version="3.0.1" targetFramework="net452" />
@@ -41,6 +43,7 @@
   <package id="Microsoft.Owin.Security.MicrosoftAccount" version="3.0.1" targetFramework="net452" />
   <package id="Microsoft.Owin.Security.OAuth" version="3.0.1" targetFramework="net452" />
   <package id="Microsoft.Owin.Security.Twitter" version="3.0.1" targetFramework="net452" />
+  <package id="Microsoft.Owin.Testing" version="3.0.1" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Modernizr" version="2.6.2" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
