Started working on unit tests

--- a/BookLover-REST-Services/BookLover.Web/BookLover.Web.csproj
+++ b/BookLover-REST-Services/BookLover.Web/BookLover.Web.csproj
@@ -52,6 +52,10 @@
       <HintPath>..\packages\AutoMapper.3.1.1\lib\net40\AutoMapper.Net4.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="AWSSDK, Version=2.3.55.0, Culture=neutral, PublicKeyToken=9f476d3089b52be3, processorArchitecture=MSIL">
+      <HintPath>..\packages\AWSSDK.2.3.55.0\lib\net45\AWSSDK.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="EntityFramework.Extended, Version=6.0.0.0, Culture=neutral, PublicKeyToken=05b7e29bdd433584, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.Extended.6.1.0.168\lib\net45\EntityFramework.Extended.dll</HintPath>
       <Private>True</Private>
@@ -321,7 +325,7 @@
     <Compile Include="Results\ChallengeResult.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="UserSessionUtils\IUserSessionManager.cs" />
-    <Compile Include="UserSessionUtils\SessionAuthoriseAttribute.cs" />
+    <Compile Include="UserSessionUtils\SessionAuthorizeAttribute.cs" />
     <Compile Include="UserSessionUtils\Settings.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
