--- a/BookLover-REST-Services/BookLover.Web/Web.config
+++ b/BookLover-REST-Services/BookLover.Web/Web.config
@@ -14,7 +14,15 @@
   <connectionStrings>
     <add name="BookLOverDbConnection" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=BookLover;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
-  <appSettings></appSettings>
+  <appSettings>
+    <!--AWSProfileName is used to reference an account that has been registered with the SDK.
+If using AWS Toolkit for Visual Studio then this value is the same value shown in the AWS Explorer.
+It is also possible to register an account using the <solution-dir>/packages/AWSSDK-X.X.X.X/tools/account-management.ps1 PowerShell script
+that is bundled with the nuget package under the tools folder.
+
+		<add key="AWSProfileName" value="" />
+-->
+  </appSettings>
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.5.2" />
