--- a/BookLover-REST-Services/BookLover.Web/packages.config
+++ b/BookLover-REST-Services/BookLover.Web/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net452" />
   <package id="AutoMapper" version="3.1.1" targetFramework="net452" />
+  <package id="AWSSDK" version="2.3.55.0" targetFramework="net452" />
   <package id="bootstrap" version="3.0.0" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="EntityFramework.Extended" version="6.1.0.168" targetFramework="net452" />
