Started integration tests

--- a/BookLover-REST-Services/BookLover.Web/Web.config
+++ b/BookLover-REST-Services/BookLover.Web/Web.config
@@ -12,7 +12,7 @@
     </sectionGroup>
   </configSections>
   <connectionStrings>
-    <add name="BookLOverDbConnection" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=BookLover;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="BookLoverDbConnection" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=BookLover;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <!--AWSProfileName is used to reference an account that has been registered with the SDK.
