--- a/BookLover-REST-Services/BookLover.Tests/packages.config
+++ b/BookLover-REST-Services/BookLover.Tests/packages.config
@@ -2,11 +2,16 @@
 <packages>
   <package id="AutoMapper" version="3.1.1" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.0" targetFramework="net452" />
+  <package id="EntityFramework.Extended" version="6.1.0.168" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.3" targetFramework="net452" />
+  <package id="Microsoft.Owin" version="3.0.1" targetFramework="net452" />
+  <package id="Microsoft.Owin.Hosting" version="3.0.1" targetFramework="net452" />
+  <package id="Microsoft.Owin.Testing" version="3.0.1" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
+  <package id="Owin" version="1.0" targetFramework="net452" />
 </packages>
